More benchmark generators

--- a/benchmarks/data-lrat/chess-data/Makefile
+++ b/benchmarks/data-lrat/chess-data/Makefile
@@ -1,8 +1,10 @@
 INTERP = python3
 N = 10
 VLEVEL = 2
+SEED=123456
 
 GENERATOR = $(INTERP) ../../chess.py
+RANDOMIZER = ../../randomizer.py
 SOLVER = $(INTERP) ../../../prototype/solver.py
 CHECKER = ../../../lrat/lrat-check
 GRABBER = ../../grab_clauses.py
@@ -10,9 +12,13 @@ EXTENSION = lrat
 
 q: chess-$(N)-column.data
 
+rq: chess-$(N)-column-randomorder.data
+
 nq: chess-$(N)-noquant.data
 
 e: chess-$(N)-equation.data
+
+re: chess-$(N)-equation-randomorder.data
 
 ns: chess-$(N)-noschedule.data
 
@@ -27,12 +33,28 @@ chess-$(N)-column.data:
 	$(CHECKER) chess-$(N)-column.cnf chess-$(N)-column.$(EXTENSION) | tee -a chess-$(N)-column.data
 	rm -f chess-$(N)-column.$(EXTENSION)
 
+chess-$(N)-column-randomorder.data:
+	$(GENERATOR) -n $(N) -r chess-$(N)-column-randomorder | tee chess-$(N)-column-randomorder.data
+	$(RANDOMIZER) chess-$(N)-column-randomorder.cnf $(SEED)
+	$(SOLVER) -v $(VLEVEL) -i chess-$(N)-column-randomorder.cnf -s chess-$(N)-column-randomorder.schedule \
+		-p chess-$(N)-column-randomorder.order -o chess-$(N)-column-randomorder.$(EXTENSION) 2>&1 | tee -a chess-$(N)-column-randomorder.data
+	$(CHECKER) chess-$(N)-column-randomorder.cnf chess-$(N)-column-randomorder.$(EXTENSION) | tee -a chess-$(N)-column-randomorder.data
+	rm -f chess-$(N)-column-randomorder.$(EXTENSION)
+
 chess-$(N)-equation.data:
 	$(GENERATOR) -n $(N) -r chess-$(N)-equation -p e | tee chess-$(N)-equation.data
+	$(RANDOMIZER) chess-$(N)-equation-randomorder.cnf $(SEED)
 	$(SOLVER) -v $(VLEVEL) -i chess-$(N)-equation.cnf -s chess-$(N)-equation.schedule -m 3 \
 		-p chess-$(N)-equation.order -o chess-$(N)-equation.$(EXTENSION) 2>&1 | tee -a chess-$(N)-equation.data
 	$(CHECKER) chess-$(N)-equation.cnf chess-$(N)-equation.$(EXTENSION) | tee -a chess-$(N)-equation.data
 	rm -f chess-$(N)-equation.$(EXTENSION)
+
+chess-$(N)-equation-randomorder.data:
+	$(GENERATOR) -n $(N) -r chess-$(N)-equation-randomorder -p e | tee chess-$(N)-equation-randomorder.data
+	$(SOLVER) -v $(VLEVEL) -i chess-$(N)-equation-randomorder.cnf -s chess-$(N)-equation-randomorder.schedule -m 3 \
+		-p chess-$(N)-equation-randomorder.order -o chess-$(N)-equation-randomorder.$(EXTENSION) 2>&1 | tee -a chess-$(N)-equation-randomorder.data
+	$(CHECKER) chess-$(N)-equation-randomorder.cnf chess-$(N)-equation-randomorder.$(EXTENSION) | tee -a chess-$(N)-equation-randomorder.data
+	rm -f chess-$(N)-equation-randomorder.$(EXTENSION)
 
 chess-$(N)-noquant.data:
 	$(GENERATOR) -n $(N) -r chess-$(N)-noquant | tee chess-$(N)-noquant.data
@@ -66,7 +88,9 @@ chess-$(N)-gbucket.data:
 
 data:
 	$(GRABBER) chess-*-column.data > chess-column.csv
+	$(GRABBER) chess-*-column-randomorder.data > chess-column-randomorder.csv
 	$(GRABBER) chess-*-equation.data > chess-equation.csv
+	$(GRABBER) chess-*-equation-randomorder.data > chess-equation-randomorder.csv
 	$(GRABBER) chess-*-bucket.data > chess-bucket.csv
 	$(GRABBER) chess-*-gbucket.data > chess-gbucket.csv
 	$(GRABBER) chess-*-noquant.data > chess-noquant.csv
