Benchmarking integer equations

--- a/benchmarks/data-lrat/chess-data/Makefile
+++ b/benchmarks/data-lrat/chess-data/Makefile
@@ -2,6 +2,7 @@ INTERP = python3
 N = 10
 VLEVEL = 1
 SEED=123456
+MOD=3
 
 GENERATOR = $(INTERP) ../../chess.py
 RANDOMIZER = ../../randomizer.py
@@ -17,6 +18,8 @@ rq: chess-$(N)-column-randomorder.data
 nq: chess-$(N)-noquant.data
 
 e: chess-$(N)-equation.data
+
+ie: chess-$(N)-equation-integer.data
 
 re: chess-$(N)-equation-randomorder.data
 
@@ -41,17 +44,19 @@ chess-$(N)-column-randomorder.data:
 	$(CHECKER) chess-$(N)-column-randomorder.cnf chess-$(N)-column-randomorder.$(EXTENSION) | tee -a chess-$(N)-column-randomorder.data
 	rm -f chess-$(N)-column-randomorder.$(EXTENSION)
 
-chess-$(N)-equation.data:
-	$(GENERATOR) -n $(N) -r chess-$(N)-equation -p e | tee chess-$(N)-equation.data
-	$(SOLVER) -v $(VLEVEL) -i chess-$(N)-equation.cnf -s chess-$(N)-equation.schedule -m 3 \
-		-p chess-$(N)-equation.order -o chess-$(N)-equation.$(EXTENSION) 2>&1 | tee -a chess-$(N)-equation.data
-	$(CHECKER) chess-$(N)-equation.cnf chess-$(N)-equation.$(EXTENSION) | tee -a chess-$(N)-equation.data
-	rm -f chess-$(N)-equation.$(EXTENSION)
+chess-$(N)-equation-integer.data:
+	$(GENERATOR) -n $(N) -r chess-$(N)-equation-integer -p e | tee chess-$(N)-equation-integer.data
+	$(SOLVER) -v $(VLEVEL) -i chess-$(N)-equation-integer.cnf -s chess-$(N)-equation-integer.schedule -m $(MOD) \
+		-p chess-$(N)-equation-integer.order -o chess-$(N)-equation-integer.$(EXTENSION) 2>&1 | tee -a chess-$(N)-equation-integer.data
+	$(CHECKER) chess-$(N)-equation-integer.cnf chess-$(N)-equation-integer.$(EXTENSION) | tee -a chess-$(N)-equation-integer.data
+	rm -f chess-$(N)-equation-integer.$(EXTENSION)
+
+
 
 chess-$(N)-equation-randomorder.data:
 	$(GENERATOR) -n $(N) -r chess-$(N)-equation-randomorder -p e | tee chess-$(N)-equation-randomorder.data
 	$(RANDOMIZER) chess-$(N)-equation-randomorder.cnf $(SEED)
-	$(SOLVER) -v $(VLEVEL) -i chess-$(N)-equation-randomorder.cnf -s chess-$(N)-equation-randomorder.schedule -m 3 \
+	$(SOLVER) -v $(VLEVEL) -i chess-$(N)-equation-randomorder.cnf -s chess-$(N)-equation-randomorder.schedule -m $(MOD) \
 		-p chess-$(N)-equation-randomorder.order -o chess-$(N)-equation-randomorder.$(EXTENSION) 2>&1 | tee -a chess-$(N)-equation-randomorder.data
 	$(CHECKER) chess-$(N)-equation-randomorder.cnf chess-$(N)-equation-randomorder.$(EXTENSION) | tee -a chess-$(N)-equation-randomorder.data
 	rm -f chess-$(N)-equation-randomorder.$(EXTENSION)
@@ -91,6 +96,7 @@ data:
 	$(GRABBER) chess-*-column-randomorder.data > chess-column-randomorder.csv
 	$(GRABBER) chess-*-equation.data > chess-equation.csv
 	$(GRABBER) chess-*-equation-randomorder.data > chess-equation-randomorder.csv
+	$(GRABBER) chess-*-equation-integer.data > chess-equation-integer.csv
 	$(GRABBER) chess-*-bucket.data > chess-bucket.csv
 	$(GRABBER) chess-*-gbucket.data > chess-gbucket.csv
 	$(GRABBER) chess-*-noquant.data > chess-noquant.csv
