Extract constraint data

--- a/benchmarks/data-lrat/chess-data/Makefile
+++ b/benchmarks/data-lrat/chess-data/Makefile
@@ -112,6 +112,7 @@ data:
 	$(GRABBER) chess-*-equation.data > chess-equation.csv
 	$(GRABBER) chess-*-equation-randomorder.data > chess-equation-randomorder.csv
 	$(GRABBER) chess-*-equation-integer.data > chess-equation-integer.csv
+	$(GRABBER) chess-*-constraint.data > chess-constraint.csv
 	$(GRABBER) chess-*-bucket.data > chess-bucket.csv
 	$(GRABBER) chess-*-gbucket.data > chess-gbucket.csv
 	$(GRABBER) chess-*-noquant.data > chess-noquant.csv
