Fix output problem

--- a/benchmarks/data-lrat/pigeon-direct-data/Makefile
+++ b/benchmarks/data-lrat/pigeon-direct-data/Makefile
@@ -19,32 +19,32 @@ pc: pigeon-direct-$(N)-constraint.data
 
 pigeon-direct-$(N)-hm-bucket.data:
 	$(GENERATOR) -$(N) > pigeon-direct-$(N)-hm.cnf
-	$(SOLVER) -b -v $(VLEVEL) -i pigeon-direct-$(N)-hm.cnf -O pigeon-direct-$(N)-hm.lrat | tee pigeon-direct-$(N)-hm-bucket.data
+	$(SOLVER) -b -v $(VLEVEL) -i pigeon-direct-$(N)-hm.cnf -O pigeon-direct-$(N)-hm.lrat 2>&1 | tee pigeon-direct-$(N)-hm-bucket.data
 	$(CHECKER) pigeon-direct-$(N)-hm.cnf pigeon-direct-$(N)-hm.lrat | tee -a pigeon-direct-$(N)-hm-bucket.data
 	rm -f pigeon-direct-$(N)-hm.lrat
 
 pigeon-direct-$(N)-pm-bucket.data:
 	$(GENERATOR) $(N) > pigeon-direct-$(N)-pm.cnf
-	$(SOLVER) -b -v $(VLEVEL) -i pigeon-direct-$(N)-pm.cnf -O pigeon-direct-$(N)-pm.lrat | tee pigeon-direct-$(N)-pm-bucket.data
+	$(SOLVER) -b -v $(VLEVEL) -i pigeon-direct-$(N)-pm.cnf -O pigeon-direct-$(N)-pm.lrat 2>&1 | tee pigeon-direct-$(N)-pm-bucket.data
 	$(CHECKER) pigeon-direct-$(N)-pm.cnf pigeon-direct-$(N)-pm.lrat | tee -a pigeon-direct-$(N)-pm-bucket.data
 	rm -f pigeon-direct-$(N)-pm.lrat
 
 pigeon-direct-$(N)-hm-linear.data:
 	$(GENERATOR) -$(N) > pigeon-direct-$(N)-hm.cnf
-	$(SOLVER) -v $(VLEVEL) -i pigeon-direct-$(N)-hm.cnf -O pigeon-direct-$(N)-hm.lrat | tee pigeon-direct-$(N)-hm-linear.data
+	$(SOLVER) -v $(VLEVEL) -i pigeon-direct-$(N)-hm.cnf -O pigeon-direct-$(N)-hm.lrat 2>&1 | tee pigeon-direct-$(N)-hm-linear.data
 	$(CHECKER) pigeon-direct-$(N)-hm.cnf pigeon-direct-$(N)-hm.lrat | tee -a pigeon-direct-$(N)-hm-linear.data
 	rm -f pigeon-direct-$(N)-hm.lrat
 
 pigeon-direct-$(N)-pm-linear.data:
 	$(GENERATOR) $(N) > pigeon-direct-$(N)-pm.cnf
-	$(SOLVER) -v $(VLEVEL) -i pigeon-direct-$(N)-pm.cnf -O pigeon-direct-$(N)-pm.lrat | tee pigeon-direct-$(N)-pm-linear.data
+	$(SOLVER) -v $(VLEVEL) -i pigeon-direct-$(N)-pm.cnf -O pigeon-direct-$(N)-pm.lrat 2>&1 | tee pigeon-direct-$(N)-pm-linear.data
 	$(CHECKER) pigeon-direct-$(N)-pm.cnf pigeon-direct-$(N)-pm.lrat | tee -a pigeon-direct-$(N)-pm-linear.data
 	rm -f pigeon-direct-$(N)-pm.lrat
 
 pigeon-direct-$(N)-constraint.data:
 	$(GENERATOR) -$(N) > pigeon-direct-$(N)-constraint.cnf
 	$(EXTRACTOR) < pigeon-direct-$(N)-constraint.cnf > pigeon-direct-$(N)-constraint.schedule
-	$(SOLVER) -v $(VLEVEL) -i pigeon-direct-$(N)-constraint.cnf -o pigeon-direct-$(N)-constraint.lrat -s pigeon-direct-$(N)-constraint.schedule | tee pigeon-direct-$(N)-constraint.data
+	$(SOLVER) -v $(VLEVEL) -i pigeon-direct-$(N)-constraint.cnf -o pigeon-direct-$(N)-constraint.lrat -s pigeon-direct-$(N)-constraint.schedule 2>&1 | tee pigeon-direct-$(N)-constraint.data
 	$(CHECKER) pigeon-direct-$(N)-constraint.cnf pigeon-direct-$(N)-constraint.lrat | tee -a pigeon-direct-$(N)-constraint.data
 	rm -f pigeon-direct-$(N)-constraint.lrat
 
@@ -54,6 +54,7 @@ data:
 	$(GRABBER) pigeon-*-pm-bucket.data > pigeon-direct-pm-bucket.csv
 	$(GRABBER) pigeon-*-hm-linear.data > pigeon-direct-hm-linear.csv
 	$(GRABBER) pigeon-*-pm-linear.data > pigeon-direct-pm-linear.csv
+	$(GRABBER) pigeon-*-constraint.data > pigeon-direct-constraint.csv
 
 
 
