--- a/benchmarks/data-lrat/chess-torus-data/Makefile
+++ b/benchmarks/data-lrat/chess-torus-data/Makefile
@@ -14,6 +14,8 @@ nq: chess-torus-$(N)-noquant.data
 
 e: chess-torus-$(N)-equation.data
 
+dc: chess-torus-$(N)-constraint.data
+
 dc: chess-torus-$(N)-constraint-dual.data
 
 ns: chess-torus-$(N)-noschedule.data
@@ -35,6 +37,13 @@ chess-torus-$(N)-equation.data:
 		-p chess-torus-$(N)-equation.order -o chess-torus-$(N)-equation.$(EXTENSION) 2>&1 | tee -a chess-torus-$(N)-equation.data
 	$(CHECKER) chess-torus-$(N)-equation.cnf chess-torus-$(N)-equation.$(EXTENSION) | tee -a chess-torus-$(N)-equation.data
 	rm -f chess-torus-$(N)-equation.$(EXTENSION)
+
+chess-torus-$(N)-constraint.data:
+	$(GENERATOR) -w b -n $(N) -r chess-torus-$(N)-constraint -p d | tee chess-torus-$(N)-constraint.data
+	$(SOLVER) -v $(VLEVEL) -i chess-torus-$(N)-constraint.cnf -s chess-torus-$(N)-constraint.schedule -m 3 \
+		-p chess-torus-$(N)-constraint.order -o chess-torus-$(N)-constraint.$(EXTENSION) 2>&1 | tee -a chess-torus-$(N)-constraint.data
+	$(CHECKER) chess-torus-$(N)-constraint.cnf chess-torus-$(N)-constraint.$(EXTENSION) | tee -a chess-torus-$(N)-constraint.data
+	rm -f chess-torus-$(N)-constraint.$(EXTENSION)
 
 chess-torus-$(N)-constraint-dual.data:
 	$(GENERATOR) -w b -n $(N) -r chess-torus-$(N)-constraint-dual -p d | tee chess-torus-$(N)-constraint-dual.data
@@ -77,6 +86,7 @@ chess-torus-$(N)-gbucket.data:
 data:
 	$(GRABBER) chess-torus-*-column.data > chess-torus-column.csv
 	$(GRABBER) chess-torus-*-equation.data > chess-torus-equation.csv
+	$(GRABBER) chess-torus-*-constraint-dual.data > chess-torus-constraint-dual.csv
 #	$(GRABBER) chess-torus-*-bucket.data > chess-torus-bucket.csv
 #	$(GRABBER) chess-torus-*-gbucket.data > chess-torus-gbucket.csv
 #	$(GRABBER) chess-torus-*-noquant.data > chess-torus-noquant.csv
