--- a/benchmarks/data-lrat/chess-data/Makefile
+++ b/benchmarks/data-lrat/chess-data/Makefile
@@ -152,6 +152,7 @@ data:
 	$(GRABBER) chess-*-equation.data > chess-equation.csv
 	$(GRABBER) chess-*-equation-randomorder.data > chess-equation-randomorder.csv
 	$(GRABBER) chess-*-equation-integer.data > chess-equation-integer.csv
+	$(GRABBER) chess-*-equation-integer-randomorder.data > chess-equation-integer-randomorder.csv
 	$(GRABBER) chess-*-constraint.data > chess-constraint.csv
 	$(GRABBER) chess-*-constraint-dual.data > chess-constraint-dual.csv
 	$(GRABBER) chess-*-constraint-dual-randomorder.data > chess-constraint-dual-randomorder.csv
